<resources>
    <string name="app_name">Online Shop</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="view_products">View Products</string>
    <string name="shamboo">Shamboo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="specification_brand_sku">Specification Brand sku</string>
    <string name="black_bag">Black Bag</string>
    <string name="lkr250_00">LKR250.00</string>
    <string name="rating_and_review_5">rating and review(5)</string>
    <string name="view_all">view all</string>
    <string name="_7_days_return">7 Days Return</string>
    <string name="delivery">Delivery</string>
    <string name="warranty_not_available">Warranty not available</string>
    <string name="customer_28_june_2020">Customer 28-June 2020</string>
    <string name="this_product_is_so_great">This product is so great</string>
    <string name="thank_you_so_much">Thank you so much..</string>
    <string name="positive_seller">Positive Seller</string>
    <string name="_83">83%</string>
    <string name="rating">Rating</string>
    <string name="_85">85%</string>
    <string name="ship_a_time">Ship a time</string>
    <string name="content_is_not_available">Content is not available</string>
    <string name="follow">Follow</string>
    <string name="similar_products">Similar products</string>
    <string name="title_activity_faq">faq</string>
    <string name="how_to_reset_password">How to reset password</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="view_orders">My Orders</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="faq">FAQ</string>
    <string name="login">Login</string>
    <string name="topviewtext">Welcome to the Online Store !</string>
    <string name="username">User Name</string>
    <string name="enteruser">Enter User Name</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter User Password</string>
    <string name="login2">Skip Login</string>
    <string name="create_account">Create An Account</string>
    <string name="forgetpassword">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="google">Login with Google Account!</string>
    <string name="email">E-Mail</string>
    <string name="forget">Enter Your E-mail here. We will send a link to your E-mail to reset your password !</string>
    <string name="search_product">Search Product</string>
    <string name="address_id">59/6\n47 Heather Way Street\nColombo\nWestern province\n104800\n0702349870</string>
</resources>