<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OverviewFragment">
<ScrollView
    android:id="@+id/overview_scroll"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/overview_cons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_top"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/bag1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            />
        <androidx.cardview.widget.CardView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:id="@+id/cart_details"
            app:layout_constraintTop_toBottomOf="@+id/img_top"
            android:layout_width="match_parent"
            android:background="@color/cardview_shadow_end_color"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="300dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lkr250_00"
                        android:layout_marginStart="75dp"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content"
                        android:text="@string/black_bag"
                        android:textStyle="bold"
                        android:layout_marginStart="75dp"
                        android:textSize="14sp"
                        />
                    <android.widget.RatingBar
                        android:layout_width="240dp"
                        android:layout_marginTop="1dp"
                        android:layout_height="wrap_content"
                        android:rating="4"
                        android:numStars="5"
                        android:max="5"
                        android:scaleX="0.4"
                        android:scaleY="0.4"
                        android:progressTint="@android:color/holo_orange_dark"
                        android:progressBackgroundTint="@android:color/holo_orange_dark"

                      />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"

                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/user_shares_black"
                        />
                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:layout_width="20dp"
                      android:layout_marginEnd="10dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/wish_heart_black"
                        />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:padding="4dp"
            android:id="@+id/cart_details1"
            app:layout_constraintTop_toBottomOf="@+id/cart_details"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_marginStart="50dp"
                    android:layout_width="260dp"
                    android:textStyle="bold"
                    android:text="@string/specification_brand_sku"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/user_forward_arrow_black"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:id="@+id/cart_details2"
            app:layout_constraintTop_toBottomOf="@+id/cart_details1"
            android:layout_width="match_parent"
            android:layout_height="100dp">
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_gravity="center_vertical"
                  android:gravity="center"
                  android:orientation="horizontal"
                  >
                  <TextView
                      android:layout_marginStart="50dp"
                      android:layout_width="wrap_content"
                      android:text="Delivery"
                      android:textStyle="bold"
                      android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                        android:layout_marginStart="50dp"
                        android:layout_width="wrap_content"
                        android:text="Northern Jaffna"
                        android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_marginStart="50dp"
                            android:layout_width="wrap_content"
                            android:text="Home Delivery 9 to 10days"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
              </LinearLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_gravity="center_vertical"
                  android:gravity="center"
                  android:layout_marginTop="10dp"
                  android:orientation="horizontal"
                  >
                  <TextView
                      android:layout_marginStart="20dp"
                      android:layout_width="wrap_content"
                      android:text="@string/delivery"
                      android:textStyle="bold"
                      android:layout_height="wrap_content"/>
                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
                      <TextView
                          android:layout_marginStart="50dp"
                          android:layout_width="wrap_content"
                          android:text="@string/_7_days_return"
                          android:layout_height="wrap_content"/>
                      <TextView
                          android:layout_marginStart="50dp"
                          android:layout_width="wrap_content"
                          android:text="@string/warranty_not_available"
                          android:layout_height="wrap_content"/>
                  </LinearLayout>
              </LinearLayout>
          </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView

            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:id="@+id/cart_details3"
            app:layout_constraintTop_toBottomOf="@+id/cart_details2"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="60dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/user_home_black"
                    />
                <android.widget.Button
                    android:layout_width="140dp"
                    android:background="@drawable/btnbackground"
                    android:textColor="@android:color/white"
                    android:text="@string/add_to_wishlist"
                    style="@style/CardView"
                    android:textAllCaps="true"
                    android:layout_height="35dp"/>
                <android.widget.Button
                    android:layout_marginStart="20dp"
                    android:layout_width="120dp"
                    style="@style/CardView"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:background="@drawable/btnbackground"
                    android:text="@string/add_to_cart"
                    android:layout_height="35dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

</FrameLayout>